packages/frontend/tests/type_errors/unknown_variant.nemo
fn main() = {
  match 10 {
    Unknown::C _ => {}
  }
}
